results/SVCOMP/specgen/log-HttpServletRequest-2024_02_25_21_00_04.txt
import java.util.*;

public class HttpServletRequest {

  private /*@ spec_public @*/ Cookie cookie = null;
  private /*@ spec_public @*/ String tainted = null;

  /*@ public normal_behavior
    @    requires tainted != null;
    @    assignable this.cookie, this.tainted;
    @    ensures this.tainted == value && this.cookie.getName().equals(value) && this.cookie.getValue().equals(value);
    @*/
  public void setTaintedValue(String value) {
    tainted = value;
    this.cookie = new Cookie(tainted, tainted);
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.length == 1 && \result[0].equals(tainted);
    @*/
  public String[] getParameterValues(String name) {
    return new String[] {tainted};
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.equals(tainted);
    @*/
  public String getAuthType() {
    return tainted;
  }

  /*@ public normal_behavior
    @    requires cookie != null;
    @    ensures \result.length == 1 && \result[0].equals(cookie);
    @*/
  public Cookie[] getCookies() {
    return new Cookie[] {cookie};
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.equals(tainted);
    @*/
  public String getHeader(String string) {
    return tainted;
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.hasMoreElements() && \result.nextElement().equals(tainted);
    @*/
  public Enumeration getHeaders(String string) {
    return Collections.enumeration(Collections.singleton(tainted));
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.hasMoreElements() && \result.nextElement().equals(tainted);
    @*/
  public Enumeration getHeaderNames() {
    return Collections.enumeration(Collections.singleton(tainted));
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.equals(tainted);
    @*/
  public String getQueryString() {
    return tainted;
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.equals(tainted);
    @*/
  public String getRemoteUser() {
    return tainted;
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.toString().equals(tainted);
    @*/
  public StringBuffer getRequestURL() {
    return new StringBuffer(tainted);
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.equals(tainted);
    @*/
  public String getParameter(String string) {
    return tainted;
  }

  /*@ public normal_behavior
    @    ensures \result.hasMoreElements() && \result.nextElement().equals("name");
    @*/
  public Enumeration getParameterNames() {
    return Collections.enumeration(Collections.singleton("name"));
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.containsKey("name") && \result.containsValue(tainted);
    @*/
  public Map getParameterMap() {
    Map<String, String> map = new HashMap<>();
    map.put("name", tainted);
    return map;
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.equals(tainted);
    @*/
  public String getProtocol() {
    return tainted;
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.equals(tainted);
    @*/
  public String getScheme() {
    return tainted;
  }
}
/home/max/Documents/JMLGPT/tmp/HttpServletRequest.java:5: error: cannot find symbol
  private /*@ spec_public @*/ Cookie cookie = null;
                              ^
  symbol:   class Cookie
  location: class HttpServletRequest
/home/max/Documents/JMLGPT/tmp/HttpServletRequest.java:38: error: cannot find symbol
  public Cookie[] getCookies() {
         ^
  symbol:   class Cookie
  location: class HttpServletRequest
/home/max/Documents/JMLGPT/tmp/HttpServletRequest.java:15: error: cannot find symbol
    this.cookie = new Cookie(tainted, tainted);
                      ^
  symbol:   class Cookie
  location: class HttpServletRequest
/home/max/Documents/JMLGPT/tmp/HttpServletRequest.java:39: error: cannot find symbol
    return new Cookie[] {cookie};
               ^
  symbol:   class Cookie
  location: class HttpServletRequest
4 errors

import java.util.*;

public class HttpServletRequest {

  private /*@ spec_public @*/ String tainted = null;

  /*@ public normal_behavior
    @    requires tainted != null;
    @    assignable this.tainted;
    @    ensures this.tainted == value;
    @*/
  public void setTaintedValue(String value) {
    tainted = value;
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.length == 1 && \result[0].equals(tainted);
    @*/
  public String[] getParameterValues(String name) {
    return new String[] {tainted};
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.equals(tainted);
    @*/
  public String getAuthType() {
    return tainted;
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.equals(tainted);
    @*/
  public String[] getCookies() {
    return new String[] {tainted};
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.equals(tainted);
    @*/
  public String getHeader(String string) {
    return tainted;
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.hasMoreElements() && \result.nextElement().equals(tainted);
    @*/
  public Enumeration getHeaders(String string) {
    return Collections.enumeration(Collections.singleton(tainted));
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.hasMoreElements() && \result.nextElement().equals(tainted);
    @*/
  public Enumeration getHeaderNames() {
    return Collections.enumeration(Collections.singleton(tainted));
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.equals(tainted);
    @*/
  public String getQueryString() {
    return tainted;
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.equals(tainted);
    @*/
  public String getRemoteUser() {
    return tainted;
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.toString().equals(tainted);
    @*/
  public StringBuffer getRequestURL() {
    return new StringBuffer(tainted);
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.equals(tainted);
    @*/
  public String getParameter(String string) {
    return tainted;
  }

  /*@ public normal_behavior
    @    ensures \result.hasMoreElements() && \result.nextElement().equals("name");
    @*/
  public Enumeration getParameterNames() {
    return Collections.enumeration(Collections.singleton("name"));
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.containsKey("name") && \result.containsValue(tainted);
    @*/
  public Map getParameterMap() {
    Map<String, String> map = new HashMap<>();
    map.put("name", tainted);
    return map;
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.equals(tainted);
    @*/
  public String getProtocol() {
    return tainted;
  }

  /*@ public normal_behavior
    @    requires tainted != null;
    @    ensures \result.equals(tainted);
    @*/
  public String getScheme() {
    return tainted;
  }
}
